id6/id6-proxy_Service_id6.yaml
apiVersion: v1
kind: Service
metadata:
  name: id6-proxy
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    transpire.ocf.io/deployment: id6-proxy
