id6/id6_Service_id6.yaml
apiVersion: v1
kind: Service
metadata:
  name: id6
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    transpire.ocf.io/deployment: id6
