id6/id6-proxy_Ingress_id6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    io.cilium/websocket: enabled
    kubernetes.io/tls-acme: 'true'
    projectcontour.io/websocket-routes: /
  name: id6-proxy
spec:
  ingressClassName: cilium
  rules:
  - host: discord.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: id6-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - discord.ocf.berkeley.edu
    secretName: id6-proxy-tls
